--- a/frontend/myCrossing/src/app/perfil/perfil.component.html
+++ b/frontend/myCrossing/src/app/perfil/perfil.component.html
@@ -92,5 +92,6 @@
   <app-misvecinos></app-misvecinos>
 </div>
 <div id="coleccionesp" class="wrapper-perfil">
+  <h2>Colecciones Especiales</h2>
   <app-coleccionesp></app-coleccionesp>
 </div>
