--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -78,4 +78,11 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.flex-centered{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
