--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -91,6 +91,10 @@ body{
   background-color: blue;
 }
 
+.check-button-empty:hover{
+  background-color: rgb(255, 145, 0);
+}
+
 .check-button-full{
   background-color: red;
 }
