Vista, DB y PHP
Vista:
-Las flechas se esconden en caso de que no se pueda avanzar/retroceder mas
-El boton de coleccion se queda seleccionado

DB:
-Creada las tablas
-Actualizado el populate

PHP:
-CRU coleccionesespeciales done

Fix:
-Arreglado un problema en checkDatos en auth.php

--- a/frontend/myCrossing/src/app/navbar/navbar.component.html
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.html
@@ -16,6 +16,7 @@
         <img src="../../assets/images/logo.png" (click)="toggleMenu()" style="margin-left: 5%"/>
         <div class="dropdown-menu" [hidden]="!menu" >
           <button class="button-menu" routerLink="/perfil" routerLinkActive="activo" (click)="menu = false">Perfil</button>
+          <button class="button-menu" (click)="updateCEInv()" [hidden]="this.verification.user != 1">Actualizar Inventario</button>
           <button class="button-menu" (click)="logOut()">Cierra sesión</button>
         </div>
       </div>
