feat: CE Admin method
-Realizado el metodo base por el que el administrador actualiza el inventario (a falta de la API - WIP)

-Añadido metodo en validacionUsuario para comprobar que es administrador

-Fixed updateCE, pendiente de cambiarlo en cuanto cambie la estructura de la DB

--- a/frontend/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
+++ b/frontend/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="paginacion-content">
-    <ng-container *ngFor="let item of DIY | paginacion:page_number">
+    <ng-container *ngFor="let item of inventario | paginacion:page_number">
       <div class="item-container"> <!-- si esta en la lista, añadir la clase en-lista-->
         <div class="check-container">
           <ng-container *ngIf="listaUsuario.includes(item); else noEnLista">
