Vista casi terminada y mas ts

--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
@@ -35,6 +35,14 @@
 .last{
     margin-right: 2.5vw;
 }
+.panel{
+    display: none;
+    position: fixed;
+}
+.image{
+    width: 3vw;
+    height: 3vw;
+}
 .circulo{
     border-style: solid;
     border-radius: 100%;
