Read objetos hecho y modificaciones

--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
@@ -1,6 +1,6 @@
 <div class="visitasContainer">
     <div class="oscuro" (click)="hide=true" [style.visibility]="hide ? 'hidden': 'visible'"></div>
-    <div class="panel" [style.top.px]="top" [style.left.px]="left" [style.visibility]="hide ? 'hidden': 'visible'">Hola buenos dias soy un panel</div>
+    <div class="panel" [style.visibility]="hide ? 'hidden': 'visible'">Hola buenos dias soy un panel</div>
     <div class="cabeceraA">
         <div class="cabeceraB first">L</div>
         <div class="cabeceraB">M</div>
