--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
@@ -38,18 +38,19 @@
 .oscuro{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     background-color: rgba(0, 0, 0, 0.644);
 }
 .panel{
+    top:40%;
+    left:40%;
     padding: 2%;
     display: block;
     position: fixed;
     border-style: solid;
     border-radius: 2vw;
-    top:30%;
     background-color: burlywood;
 }
 .image{
