--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
@@ -1,6 +1,24 @@
 <div class="visitasContainer">
     <div class="oscuro" (click)="hide=true" [style.visibility]="hide ? 'hidden': 'visible'"></div>
-    <div class="panel" [style.visibility]="hide ? 'hidden': 'visible'">Hola buenos dias soy un panel</div>
+    <div class="panel" [style.visibility]="hide ? 'hidden': 'visible'">
+        <button (click)="agrega('Totakeke', totakeke)" [style.opacity]="totakeke ? '1': '0.4'" class="izq">Totakeke</button>
+        <button (click)="agrega('Juliana', juliana)" [style.opacity]="juliana ? '1': '0.4'" class="der">Juliana</button>
+        <button (click)="agrega('Pili', pili)" [style.opacity]="pili ? '1': '0.4'" class="izq">Pili</button>
+        <button (click)="agrega('Alcatifa', alcatifa)" [style.opacity]="alcatifa ? '1': '0.4'" class="der">Alcatifa</button>
+        <button (click)="agrega('Betunio', betunio)" [style.opacity]="betunio ? '1': '0.4'" class="izq">Betunio</button>
+        <button (click)="agrega('Tili', tili)" [style.opacity]="tili ? '1': '0.4'" class="der">Tili</button>
+        <button (click)="agrega('Gandulio', gandulio)" [style.opacity]="gandulio ? '1': '0.4'" class="izq">Gandulio</button>
+        <button (click)="agrega('Fauno', fauno)" [style.opacity]="fauno ? '1': '0.4'" class="der">Fauno</button>
+        <button (click)="agrega('Kamilo', kamilo)" [style.opacity]="kamilo ? '1': '0.4'" class="izq">Kamilo</button>
+        <button (click)="agrega('CJ', cj)" [style.opacity]="cj ? '1': '0.4'" class="der">CJ</button>
+        <button (click)="agrega('Gulliver', gulliver)" [style.opacity]="gulliver ? '1': '0.4'" class="izq">Gulliver</button>
+        <button (click)="agrega('Gullivarrr', gullivarrr)" [style.opacity]="gullivarrr ? '1': '0.4'" class="der">Gullivarrr</button>
+        <button (click)="agrega('Ladino', ladino)" [style.opacity]="ladino ? '1': '0.4'" class="izq">Ladino</button>
+        <button (click)="agrega('Pascal', pascal)" [style.opacity]="pascal ? '1': '0.4'" class="der">Pascal</button>
+        <button (click)="agrega('Buh', buh)" [style.opacity]="buh ? '1': '0.4'" class="izq">Buh</button>
+        <button (click)="agrega('Estela', estela)" [style.opacity]="estela ? '1': '0.4'" class="der">Estela</button>
+    </div>
+    <div class="notificacion" [style.visibility]="avisando ? 'visible': 'hidden'">{{aviso}}</div>
     <div class="cabeceraA">
         <div class="cabeceraB first">L</div>
         <div class="cabeceraB">M</div>
@@ -11,68 +29,191 @@
         <div class="cabeceraB last">D</div>
     </div>
     <div class="pasado">
-        <div class="visita first">
-            <ng-container *ngIf="lpa==null">
-                <div (click)="vacio($event,'lpa')">
+        <div (click)="vacio($event,'lpa')" class="visita first">
+            <ng-container *ngIf="isEmpty(lpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="lpa!=null">
+            <ng-container *ngIf="!isEmpty(lpa)">
                 <div class="elemento">
                     <img class="image" src="../../../assets/images/{{lpa | lowercase}}.jpg">
                     {{lpa | titlecase}}
                 </div>
             </ng-container>
         </div>
-        <div class="visita">
-            <ng-container *ngIf="mpa==null">
-                <div (click)="vacio($event,'mpa')">
+        <div (click)="vacio($event,'mpa')" class="visita">
+            <ng-container *ngIf="isEmpty(mpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="mpa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(mpa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{mpa | lowercase}}.jpg">
+                    {{mpa | titlecase}}
+                </div>
+            </ng-container>
         </div>
-        <div class="visita">
-            <ng-container *ngIf="xpa==null">
-                <div (click)="vacio($event,'xpa')">
+        <div (click)="vacio($event,'xpa')" class="visita">
+            <ng-container *ngIf="isEmpty(xpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="xpa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(xpa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{xpa | lowercase}}.jpg">
+                    {{xpa | titlecase}}
+                </div>
+            </ng-container>
         </div>
-        <div class="visita">
-            <ng-container *ngIf="jpa==null">
-                <div (click)="vacio($event,'jpa')">
+        <div (click)="vacio($event,'jpa')" class="visita">
+            <ng-container *ngIf="isEmpty(jpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="jpa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(jpa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{jpa | lowercase}}.jpg">
+                    {{jpa | titlecase}}
+                </div>
+            </ng-container>
         </div>
-        <div class="visita">
-            <ng-container *ngIf="vpa==null">
-                <div (click)="vacio($event,'vpa')">
+        <div (click)="vacio($event,'vpa')" class="visita">
+            <ng-container *ngIf="isEmpty(vpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="vpa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(vpa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{vpa | lowercase}}.jpg">
+                    {{vpa | titlecase}}
+                </div>
+            </ng-container>
         </div>
-        <div class="visita">
-            <ng-container *ngIf="spa==null">
-                <div (click)="vacio($event,'spa')">
+        <div class="visita noPointer">
+            <ng-container *ngIf="isEmpty(spa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="spa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(spa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{spa | lowercase}}.jpg">
+                    {{spa | titlecase}}
+                </div>
+            </ng-container>
         </div>
-        <div class="visita last">
-            <ng-container *ngIf="dpa==null">
-                <div (click)="vacio($event,'dpa')">
+        <div class="visita last noPointer">
+            <ng-container *ngIf="isEmpty(dpa)">
+                <div>
                     <div class="circulo">+</div>
                 </div>
             </ng-container>
-            <ng-container *ngIf="dpa!=null">No es null</ng-container>
+            <ng-container *ngIf="!isEmpty(dpa)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{dpa | lowercase}}.jpg">
+                    {{dpa | titlecase}}
+                </div>
+            </ng-container>
         </div>
     </div>
     Semana actual
-    <div class="presente">Hola</div>
+    <div class="presente">
+        <div (click)="vacio($event,'lpr')" class="visita first">
+            <ng-container *ngIf="isEmpty(lpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(lpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{lpr | lowercase}}.jpg">
+                    {{lpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div (click)="vacio($event,'mpr')" class="visita">
+            <ng-container *ngIf="isEmpty(mpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(mpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{mpr | lowercase}}.jpg">
+                    {{mpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div (click)="vacio($event,'xpr')" class="visita">
+            <ng-container *ngIf="isEmpty(xpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(xpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{xpr | lowercase}}.jpg">
+                    {{xpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div (click)="vacio($event,'jpr')" class="visita">
+            <ng-container *ngIf="isEmpty(jpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(jpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{jpr | lowercase}}.jpg">
+                    {{jpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div (click)="vacio($event,'vpr')" class="visita">
+            <ng-container *ngIf="isEmpty(vpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(vpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{vpr | lowercase}}.jpg">
+                    {{vpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div class="visita noPointer">
+            <ng-container *ngIf="isEmpty(spr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(spr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{spr | lowercase}}.jpg">
+                    {{spr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+        <div class="visita last noPointer">
+            <ng-container *ngIf="isEmpty(dpr)">
+                <div>
+                    <div class="circulo">+</div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!isEmpty(dpr)">
+                <div class="elemento">
+                    <img class="image" src="../../../assets/images/{{dpr | lowercase}}.jpg">
+                    {{dpr | titlecase}}
+                </div>
+            </ng-container>
+        </div>
+    </div>
+    <div style="text-align: end;"><button style="margin-right: 4vw; margin-bottom: 1vw;" (click)="guardar()">Guardar</button></div>
 </div>
